# thedirector

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ActivityFeed.tsx  ConnectionCard.tsx  MarkdownViewer.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Dream.tsx  Query.tsx  Wiki.tsx
thedirector/: cli.py  config.py  main.py
thedirector/api/: activity.py  chat.py  chats.py  dream.py  ingest.py  oauth.py  query.py  status.py  wiki.py
thedirector/connectors/: base.py  db.py  gmail.py  message.py  notion.py  slack.py
thedirector/llm/: client.py  retry.py
thedirector/prompts/: chat.md  create_page.md  dream.md  index.md  lint.md  query.md  triage.md  update_page.md
thedirector/store/: chats.py  credentials.py  dreams.py  oauth_state.py  raw.py  wiki.py
thedirector/wiki/: agent.py  dream.py  lint.py  loop.py  prompts.py  query.py  tools.py
