[project]
name = "thedirector"
version = "0.1.0"
description = "LLM Wiki — knowledge base built by LLMs from email and Slack"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "slack-sdk>=3.31.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "python-slugify>=8.0.0",
]

[project.scripts]
thedirector = "thedirector.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
